ui.apps/src/main/content/jcr_root/apps/guides-components/clientlibs/clientlib-hfm/clientlib-base-fsi/css/navigation2.less
.navigation {
  margin: 0 1.25rem;
}

@media (min-width: 1024px) {
  .navigation {
    margin: 0;
    display: flex;
    flex-direction: column;
    min-height: 0;

    .cmp-navigation {
      overflow: auto;
      padding-inline: 1.25rem;

      &-filter__wrapper {
        padding-inline: 1.25rem;
      }

      &::-webkit-scrollbar {
        width: 6px;
      }

      &::-webkit-scrollbar-track {
        background: var(--nav-bg);
        border-radius: 0.39rem;
      }

      &::-webkit-scrollbar-thumb {
        background: var(--border-common);
        border-radius: 0.39rem;
      }

      &::-webkit-scrollbar-thumb:hover {
        background: var(--light-grey-border);
      }
    }
  }
}

